aspect of Ice.

Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.4.1
======================================================================

Python Changes
==============

- Fixed bug where None wasn't recognized as a keyword.


======================================================================
Changes since version 3.4.0
======================================================================


General Changes
===============

- Added the new property Freeze.DbEnv.<db>.LockFile and changed the
  dumpdb and transformdb utilities so that they can be run safely on
  a database environment that is currently open in another process.

- Changed the Glacier2 helper classes to cache the client category.

- Added the ability to use underscores in Slice identifiers. See the
  release notes for important information on this change.

- Added the setConnectContext method to Glacier2.SessionFactoryHelper,
  which allows an application to provide a request context to be used
  when creating a Glacier2 session. (Java and C#)

- Fixed IceGrid bug where node observers would not be notified when a
  server is re-enabled after it has been updated and if the server was
  disabled following an activation failure.

- Fixed a bug in the Glacier2.SessionFactoryHelper class (Java/C#) in
  which the getPort() method would return an incorrect default port if
  no port was configured.


C++ Changes
===========

- Fixed a bug in slice2cpp in which streaming code was not generated
  properly for types in nested modules.

- slice2cpp now generates a "one-shot" constructor for a Slice
  structure if at least one of its members has a default value.

- Fixed a bug in slice2cpp so that asynchronous "end_op" methods are
  now exported properly.
