@@ -24,8 +24,8 @@ def allTests():
     test(v.s == 16000)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.c == Test.Color.red)
     test(v.noDefault == '')
@@ -37,8 +37,8 @@ def allTests():
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
 
@@ -49,8 +49,8 @@ def allTests():
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.c == Test.Color.green)
     test(v.noDefault == '')
@@ -62,8 +62,8 @@ def allTests():
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
 
@@ -74,8 +74,8 @@ def allTests():
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
     test(v.c == Test.Color.green)
