@@ -18,8 +18,8 @@ def allTests()
     test(v.s == 16000)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.c == Test::Color::Red)
     test(v.noDefault == '')
@@ -31,8 +31,8 @@ def allTests()
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
 
@@ -43,8 +43,8 @@ def allTests()
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.c == Test::Color::Green)
     test(v.noDefault == '')
@@ -56,8 +56,8 @@ def allTests()
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
 
@@ -68,8 +68,8 @@ def allTests()
     test(v.s == 2)
     test(v.i == 3)
     test(v.l == 4)
-    test(v.f == 5.0)
-    test(v.d == 6.0)
+    test(v.f == 5.1)
+    test(v.d == 6.2)
     test(v.str == "foo bar")
     test(v.noDefault == '')
     test(v.c == Test::Color::Green)
